--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <h3>Web Developer</h3>
       <span class="des">I Develop And Design WebSites.</span>
       <button><a href="#skills">Veiw My Skills</a></button>
-    </div>
-    <div class="right">
-      <img src="portimg.svg">
-    </div>
+      </div>
+      <div class="left">
+        <img src="/photo/IMG-20231114-WA0000.png">
+      </div>
     <h1 class="bgtitle">Portfolio..</h1>
-    <h1 class="ya">YA</h1>
+    <h1 class="ya">YY</h1>
     <div class="circle1"></div>
     <div class="circle2"></div>
     <div class="circle3"></div>
