--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <button><a href="#skills">Veiw My Skills</a></button>
       </div>
       <div class="left">
-        <img src="/photo/IMG-20231114-WA0000.png">
+        <img src="/IMG-20231114-WA0000.png">
       </div>
     <h1 class="bgtitle">Portfolio..</h1>
     <h1 class="ya">YY</h1>
