--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <h3>Web Developer</h3>
       <span class="des">I Develop And Design WebSites.</span>
       <button><a href="#skills">Veiw My Skills</a></button>
-      </div>
-      <div class="left">
-        <img src="/IMG-20231114-WA0000.png">
-      </div>
+    </div>
+    <div class="right">
+      <img src="portimg.svg">
+    </div>
     <h1 class="bgtitle">Portfolio..</h1>
     <h1 class="ya">YY</h1>
     <div class="circle1"></div>
